# vk

./: .gitignore  CMakeLists.txt  vktutorial.md
.cache/clangd/index/: _fixes.hpp.8856C021F9502214.idx  _fixes.hpp.D1AF6C0CF46CAA6F.idx  _vectorize.hpp.9156B9CC725843C2.idx  _vectorize.hpp.A1864AB2422C04CA.idx  common.hpp.95A6F60D42EBE82E.idx  common.hpp.AF4C5076AF7D5623.idx  compute_common.hpp.3B5A47F970184049.idx  compute_common.hpp.D1BB554113AF5B3A.idx  compute_vector_relational.hpp.99F07BDAF60D3D5A.idx  compute_vector_relational.hpp.D9383BA8A6679DE9.idx  constants.hpp.2F09B23FD8309A1C.idx  constants.hpp.95D927559A4777FA.idx  constants.inl.40ED84D38CCD1111.idx  constants.inl.68B0E043BBBB1565.idx  context.c.31484B9A523EEF94.idx  context.c.9BE247006E3000E6.idx  dual_quaternion.hpp.A40EBB7E78C94170.idx  dual_quaternion.hpp.A9FA5FAE892FBEA1.idx  dual_quaternion.inl.18BA8DC1723E7220.idx  dual_quaternion.inl.D0EEEB67F28AD6C8.idx  egl_context.c.5B72A3A7C3F54D5A.idx  egl_context.c.68987EA950D97E95.idx  epsilon.hpp.23F50D6CC470BC71.idx  epsilon.hpp.69036E5F31DBC110.idx  epsilon.inl.223E748446FE09C6.idx  epsilon.inl.EFD39A203FB14969.idx  exponential.hpp.3E776CD1D480B05A.idx  exponential.hpp.FA0F4BE111AC616A.idx  func_common.inl.97867C1A6321FB3F.idx  func_common.inl.EDDD24DF2D838298.idx  func_exponential.inl.01F7877A2EC2A813.idx  func_exponential.inl.64611AF6EA7300A6.idx  func_geometric.inl.0764CC83F3FDF03D.idx  func_geometric.inl.E9005B6EC17012DD.idx  func_integer.inl.8D4EE19BF4ADECB4.idx  func_integer.inl.A782901D5BFCC415.idx  (+451 more)
include/: mvk.hpp
src/: main.cpp  mvk.cpp
